--- a/css/default.css
+++ b/css/default.css
@@ -125,4 +125,14 @@ a:hover {
 }
 
 
+#p1 {display:none;}
+#p2 {display:none;}
+#p3 {display:none;}
+#p4 {display:none;}
+#p5 {display:none;}
+#p6 {display:none;}
 
+.central {
+
+	position: absolute;
+}
